--- a/myapp/app/src/main/webapp/assignment/form.html
+++ b/myapp/app/src/main/webapp/assignment/form.html
@@ -11,17 +11,18 @@
 
 <form action="/assignment/add">
   <div>
-    제목 : <input name="title" type="text">
+    과제: <input name="title" type="text">
   </div>
   <div>
-    내용 : <textarea name="content"></textarea>
+    내용: <textarea name="content"></textarea>
   </div>
   <div>
-    제출마감일 : <input name="deadline" type="date">
+    제출 마감일: <input name="deadline" type="date">
   </div>
   <div>
     <button>등록</button>
   </div>
 </form>
+
 </body>
 </html>
