--- a/myapp/app/src/main/webapp/auth/form.html
+++ b/myapp/app/src/main/webapp/auth/form.html
@@ -10,9 +10,14 @@
 <h2>로그인</h2>
 
 <form action="/auth/login">
-  <div>이메일: <input name="email" type="text"></div>
-  <div>암호: <input name="password" type="password"></div>
+  <div>
+    이메일: <input name="email" type="text">
+  </div>
+  <div>
+    암호: <input name="password" type="password">
+  </div>
   <button>로그인</button>
 </form>
+
 </body>
 </html>
