--- a/t-app/app/src/main/webapp/mypage.html
+++ b/t-app/app/src/main/webapp/mypage.html
@@ -5,13 +5,14 @@
   <title>test page</title>
 </head>
 <body>
-<h1>test page</h1>
+<h1>my page</h1>
 
-<h2>test</h2>
-
-<ul>
-  <li><a href="myp.lge.html">mypage</a></li>
-</ul>
+<h2>sub title</h2>
+<div>
+  <ul>
+    <li><a href="">link</a></li>
+  </ul>
+</div>
 
 </body>
 </html>
