--- a/t-app/app/src/main/webapp/index.html
+++ b/t-app/app/src/main/webapp/index.html
@@ -5,13 +5,14 @@
   <title>test page</title>
 </head>
 <body>
-<h1>test page</h1>
+<h1>main page</h1><br>
+<h2>Menu</h2>
 
-<h2>test</h2>
 
 <ul>
-  <li><a href="myp.lge.html">mypage</a></li>
+  <li><a href="/auth/login">로그인</a></li>
+  <li><a href="/auth/logout">로그아웃</a></li>
+  <li><a href="/member/mypage">마이페이지</a></li>
 </ul>
-
 </body>
 </html>
