--- a/t-app/app/src/main/webapp/index.html
+++ b/t-app/app/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 
 
 <ul>
-  <li><a href="/auth/login">로그인</a></li>
+  <li><a href="/auth/form.html">로그인</a></li>
   <li><a href="/auth/logout">로그아웃</a></li>
   <li><a href="/member/mypage">마이페이지</a></li>
 </ul>
