--- a/servlet-app/app/src/main/webapp/index.html
+++ b/servlet-app/app/src/main/webapp/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>servlet-app</title>
 </head>
 <body>
 <h1>Servlet/JSP 실습 예제</h1>
