--- a/t-app/app/src/main/webapp/auth/form.html
+++ b/t-app/app/src/main/webapp/auth/form.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>test/login</title>
+  <title>test page</title>
 </head>
 <body>
-<h1>test page</h1>
-
-<h2>로그인</h2>
+<h1>login page</h1>
 
 <form action="/auth/login">
   <div>
