--- a/t-app/app/src/main/webapp/index.html
+++ b/t-app/app/src/main/webapp/index.html
@@ -12,7 +12,8 @@
 <ul>
   <li><a href="/auth/form.html">로그인</a></li>
   <li><a href="/auth/logout">로그아웃</a></li>
-  <li><a href="/member/mypage">마이페이지</a></li>
+  <li><a href="/member/mypage.html">마이페이지</a></li>
+  <li><a href="/member/form.html">회원</a></li>
 </ul>
 </body>
 </html>
